--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   http: ^1.1.0
   google_fonts: ^5.1.0
+  font_awesome_flutter: ^10.5.0
 
 dev_dependencies:
   flutter_test:
